version 0.31
	* Bug fixes
	* Appointments sorted by date in the summary
	* Deleted code to read old Date objects encoding

version 0.30 (2007/11/12)
	* Refactor code to handle multiple kinds of events
	* Add simple task (iCalendar VTODO) support
	* Add a task view
	* Coherent ui : in summary, day view and task view, 
	  simple click to select and double click to edit
	* Make calendar view smaller
	* Fix appointment resize bug in day view

version 0.29 (2007/11/02)
	* Preferences dialog uses a popup to select categories (r276)
	* Events text color selectable in store preferences
	* Fix time zone bugs
	* Fix iCal authenticated loading 

version 0.28
	* Simple text search

version 0.27 (2007/09/18)
	* Fix keyboard handling in the day view
	* Add store creation in preferences dialog
	* Load iCal stores asynchronously
	* Fix keyboard navigation in preferences dialog

version 0.26 (2007/08/16)
	* Save main window geometry
	* Add a 'Save all' item menu to fsync data
	* Register SimpleAgenda as an application handling 
	  .ics files and import events when user open one
	* Add a NEWS file
	* Fix compilation with gcc 3.3
	* Fix events dates in the summary
	* Selecting an event in the summary shows it in the day view