@@ -2,6 +2,7 @@ version 0.31
 	* Bug fixes
 	* Appointments sorted by date in the summary
 	* Deleted code to read old Date objects encoding
+	* Update search results when store data change
 
 version 0.30 (2007/11/12)
 	* Refactor code to handle multiple kinds of events
